RESOLVED FIXED164751
Fix iOS API test assertion after r208534
https://bugs.webkit.org/show_bug.cgi?id=164751
Summary Fix iOS API test assertion after r208534
Alex Christensen
Reported 2016-11-14 17:13:25 PST
Fix iOS API test assertion after r208534
Attachments
Patch (3.63 KB, patch)
2016-11-14 17:15 PST, Alex Christensen
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (deleted)
2016-11-14 18:11 PST, Build Bot
no flags
Patch (3.63 KB, patch)
2016-11-14 21:33 PST, Alex Christensen
no flags
Patch (1.39 KB, patch)
2016-11-15 10:55 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-11-14 17:15:03 PST
Build Bot
Comment 2 2016-11-14 18:11:05 PST
Comment on attachment 294780 [details] Patch Attachment 294780 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/2516950 New failing tests: js/regress-141098.html
Build Bot
Comment 3 2016-11-14 18:11:08 PST
Created attachment 294791 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Alex Christensen
Comment 4 2016-11-14 20:35:10 PST
Test failures seem unrelated. Will double check before landing. Please review.
Alex Christensen
Comment 5 2016-11-14 21:33:57 PST
Geoffrey Garen
Comment 6 2016-11-15 10:46:36 PST
Comment on attachment 294807 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294807&action=review > Source/WebKit/mac/WebView/WebView.mm:1426 > + WebInstallMemoryPressureHandler(); I think this means that we'll stop calling WebCore::releaseMemory on iOS, and I think that might cause a memory use regression. It seems strange that we register both MemoryPressureHandler::m_lowMemoryHandler and MemoryPressureHandler::m_releaseMemoryBlock on iOS. You should file a bug about that for Andreas. I think the best way to fix the assertion is to delete it, since we have been violating it for a while.
Alex Christensen
Comment 7 2016-11-15 10:55:46 PST
WebKit Commit Bot
Comment 8 2016-11-15 16:44:08 PST
Comment on attachment 294851 [details] Patch Clearing flags on attachment: 294851 Committed r208772: <http://trac.webkit.org/changeset/208772>
WebKit Commit Bot
Comment 9 2016-11-15 16:44:12 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 10 2016-11-29 13:03:49 PST
*** Bug 164593 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.